returns and other bug fix